reworked folders structure